--- a/RTRS/RTRS/Base.lproj/Main.storyboard
+++ b/RTRS/RTRS/Base.lproj/Main.storyboard
@@ -297,24 +297,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cjk-ej-5Y0">
-                                <rect key="frame" x="0.0" y="114" width="414" height="392"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cjk-ej-5Y0">
+                                <rect key="frame" x="0.0" y="114" width="414" height="393.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="o0x-Mw-3nA">
-                                    <size key="itemSize" width="414" height="341"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
+                                <collectionViewLayout key="collectionViewLayout" id="zWJ-RI-WtQ" customClass="RTRSCustomCollectionViewFlowLayout" customModule="RTRS" customModuleProvider="target"/>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PodcastCell" id="o5p-8Q-ep5" customClass="PodcastCollectionViewCell" customModule="RTRS" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="25.5" width="414" height="341"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="341"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="XYc-gr-6Mm">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="341"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0vg-Mu-qe7">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0vg-Mu-qe7">
                                                     <rect key="frame" x="8" y="8" width="398" height="325"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
@@ -327,15 +322,23 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1xC-Xt-Boa">
-                                <rect key="frame" x="169" y="526" width="76" height="36"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1xC-Xt-Boa" customClass="MarqueeLabel" customModule="MarqueeLabel">
+                                <rect key="frame" x="167.5" y="527.5" width="79" height="35"/>
+                                <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="scrollDuration">
+                                        <real key="value" value="15"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="trailingBuffer">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DATE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Czn-8n-dC0">
-                                <rect key="frame" x="177" y="570" width="60" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <rect key="frame" x="179" y="570.5" width="56" height="29.5"/>
+                                <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="25"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -395,7 +398,9 @@
                             <constraint firstItem="04m-aD-Oy1" firstAttribute="baseline" secondItem="09P-SH-BCb" secondAttribute="baseline" id="jK9-7o-G41"/>
                             <constraint firstItem="29U-Xx-GlW" firstAttribute="leading" secondItem="eQi-Dq-7wD" secondAttribute="leadingMargin" id="k4D-c3-a8X"/>
                             <constraint firstItem="BHp-Yv-SzE" firstAttribute="top" secondItem="09P-SH-BCb" secondAttribute="bottom" constant="8" id="k4q-pK-WCW"/>
+                            <constraint firstItem="dlb-Yv-5ia" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1xC-Xt-Boa" secondAttribute="trailing" constant="10" id="kvT-Jt-rsi"/>
                             <constraint firstItem="dlb-Yv-5ia" firstAttribute="bottom" secondItem="5yN-Iz-R57" secondAttribute="bottom" constant="138" id="mvZ-kI-cDm"/>
+                            <constraint firstItem="1xC-Xt-Boa" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="dlb-Yv-5ia" secondAttribute="leading" constant="10" id="nt6-Z2-dXD"/>
                             <constraint firstItem="BHp-Yv-SzE" firstAttribute="centerX" secondItem="dlb-Yv-5ia" secondAttribute="centerX" constant="7.5" id="ny9-dh-N0Y"/>
                             <constraint firstItem="cjk-ej-5Y0" firstAttribute="top" secondItem="NOO-MV-M9W" secondAttribute="bottom" constant="40" id="oN5-6Y-EwO"/>
                             <constraint firstItem="29U-Xx-GlW" firstAttribute="trailing" secondItem="eQi-Dq-7wD" secondAttribute="trailingMargin" id="pr1-7I-tGq"/>
@@ -407,6 +412,8 @@
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="cjk-ej-5Y0" id="fFq-2i-0gh"/>
+                        <outlet property="dateLabel" destination="Czn-8n-dC0" id="jec-Jb-V9P"/>
+                        <outlet property="titleLabel" destination="1xC-Xt-Boa" id="n4M-bV-3JY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Pc-fj-p3F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
